# ofxstatement-rs-altabanka

./: .gitignore  README.rst  pyproject.toml
.github/workflows/: pypi-publish.yml  test.yml
src/ofxstatement_rs_altabanka/: pdf_parser.py  plugin.py  xml_parser.py
tests/: test_sample.py  test_sample_pdf.py  test_sample_xml.py
tests/resources/: sample-xml-statement.xml
