[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ofxstatement-rs-altabanka"
version = "0.0.1"
authors = [
  { name="Kirill Fertikov", email="kirill.fertikov@gmail.com" },
]
description = "OFXStatement plugin for AltaBanka (Serbia)"
readme = "README.rst"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Natural Language :: English",
    "Topic :: Office/Business :: Financial :: Accounting",
    "Topic :: Utilities",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]
keywords = ["ofx", "banking", "statement", "plugin", "ofxstatement"]
dependencies = [
  "ofxstatement",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "black",
    "pytest",
]

[project.urls]
Homepage = "https://github.com/fertkir/ofxstatement-rs-altabanka/"

[project.entry-points."ofxstatement"]
rs-altabanka = "ofxstatement_rs_altabanka.plugin:RsAltabankaPlugin"
